data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3891.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\01\7f\00\02\91\80\80\80\00\01\07\6d\6f\64\75\6c"
    "\65\42\05\66\75\6e\63\42\00\00\03\82\80\80\80\00"
    "\01\00\0a\8c\80\80\80\00\01\86\80\80\80\00\00\20"
    "\00\10\00\0b"
  )
""
)